<resources>
    <string name="app_name">Dungeon Helper</string>
    <string name="races_activity_label">Races</string>
    <string name="equipment_activity_label">Equipment</string>
    <string name="armor_activity_label">Armor</string>
    <string name="string_races">Races</string>
    <string name="string_classes">Classes</string>
    <string name="string_equipment">Equipment</string>
    <string name="string_weapons">Weapons</string>
    <string name="string_armor">Armor</string>
    <string name="string_dice">Dice Roller</string>
    <string name="string_character_sheet">Character Creator</string>
    <string name="barbarian_header">Barbarian</string>
    <string name="barbarian_description">Primal Instinct:\n
People of towns and cities take pride in how their
civilized ways set them apart from animals, as if
denying one’s own nature was a mark of superiority. To
a barbarian, though, civilization is no virtue, but a sign
of weakness. The strong embrace their animal nature keen
instincts, primal physicality, and ferocious rage.
Barbarians are uncomfortable when hedged in by walls
and crowds. They thrive in the wilds of their homelands:
the tundra, jungle, or grasslands w here their tribes
live and hunt.
Barbarians come alive in the chaos of combat.
They can enter a berserk state where rage takes over,
giving them superhuman strength and resilience. A
barbarian can draw on this reservoir of fury only a few
times without resting, but those few rages are usually
sufficient to defeat whatever threats arise.\n\n
A Life of Danger:\n
Not every member of the tribes deemed “barbarians”
by scions of civilized society has the barbarian class. A
true barbarian among these people is as uncommon as
a skilled fighter in a town, and he or she plays a similar
role as a protector of the people and a leader in times
of war. Life in the wild places of the world is fraught
with peril: rival tribes, deadly weather, and terrifying
monsters. Barbarians charge headlong into that danger
so that their people don’t have to.
Their courage in the face of danger makes barbarians
perfectly suited for adventuring. Wandering is often a
way of life for their native tribes, and the rootless life of
the adventurer is little hardship for a barbarian. Some
barbarians m iss the close-knit family structures of the
tribe, but eventually find them replaced by the bonds
formed among the members of their adventuring parties.
</string>
    <string name="bard_header">Bard</string>
    <string name="bard_description">Music And Magic:\n In the worlds of D&amp;D, words and music are
not just vibrations of air, but vocalizations with
power all their own. The bard is a master of song,
speech, and the magic they contain. Bards say
that the multiverse was spoken into existence, that the
words o f the gods gave it shape, and that echoes of these
primordial Words of Creation still resound throughout
the cosmos. The music of bards is an attempt to snatch
and harness those echoes, subtly woven into their
spells and powers.
The greatest strength of bards is their sheer
versatility. Many bards prefer to stick to the sidelines
in combat, using their magic to inspire their allies and
hinder their foes from a distance. But bards are capable
of defending themselves in melee if necessary, using
their magic to bolster their sw ords and armor. Their
spells lean toward charm s and illusions rather than
blatantly destructive spells. They have a wide-ranging
knowledge of many subjects and a natural aptitude
that lets them do alm ost anything well. Bards become
masters of the talents they set their minds to perfecting,
from musical perform ance to esoteric knowledge.\n\n
Learning from Experience:\n
True bards are not com m on in the world. Not every
minstrel singing in a tavern or jester cavorting in a royal
court is a bard. Discovering the magic hidden in music
requires hard study and som e measure of natural talent
that most troubadours and jongleurs lack. It can be hard
to spot the difference between these perform ers and true
bards, though. A bard’s life is spent wandering across
the land gathering lore, telling stories, and living on the
gratitude of audiences, much like any other entertainer.
But a depth of knowledge, a level of musical skill, and a
touch of magic set bards apart from their fellows.
Only rarely do bards settle in one place for long, and
their natural desire to travel—to find new tales to tell,
new skills to learn, and new discoveries beyond the
horizon—makes an adventuring career a natural calling.
Every adventure is an opportunity to learn, practice a
variety of skills, enter long-forgotten tombs, discover lost
works of magic, decipher old tomes, travel to strange
places, or encounter exotic creatures. Bards love to
accompany heroes to witness their deeds firsthand. A
bard who can tell an awe-inspiring story from personal
experience earns renown among other bards. Indeed,
after telling so many stories about heroes accomplishing
mighty deeds, many bards take these themes to heart
and assume heroic roles themselves</string>
    <string name="cleric_header">Cleric</string>
    <string name="dwarf_header">Dwarf</string>
    <string name="dwarf_quote">\"Yerlate, elf!\" came the rough edge of a familiar voice.
        Bruenor Battlehammer walked up the back of his
        dead foe, disregarding the fact that the heavy monster lay
        on top of his elven friend. In spite of the added discomfort,
        the dwarf\’s long, pointed, often-broken nose and graystreaked
        though still-fiery red beard came as a welcome
        sight to Drizzt. \"Knew I’d find ye in trouble if I came out
        an\' looked for ye!\"\n\n

        —R. A . Salvatore, The Crystal Shard</string>
    <string name="dwarf_description">Your dwarf character has an assortment of inborn
        abilities, part and parcel of dwarven nature.\n\n

        Ability Score Increase: Your Constitution score increases by 2.\n\n

        Age: Dwarves mature at the same rate as humans, but they’re considered young until they
        reach the age of 50. On average, they live about 350 years.\n\n

        Alignment: Most dwarves are lawful, believing firmly in the benefits of a well-ordered
        society. They tend toward good as well, with a strong sense of fair play and
        a belief that everyone deserves to share in the benefits of
        a just order.\n\n

        Size: Dwarves stand between 4 and 5 feet tall and
        average about 150 pounds. Your size is Medium.\n\n

        Speed: Your base walking speed is 25 feet. Your
        speed is not reduced by wearing heavy armor.\n\n

        Dark-vision: Accustomed to life underground, you
        have superior vision in dark and dim conditions. You
        can see in dim light within 60 feet of you as if it were
        bright light, and in darkness as if it were dim light. You
        can’t discern color in darkness, only shades of gray.\n\n

        Dwarven Resilience: You have advantage on saving
        throws against poison, and you have resistance against
        poison damage (explained in chapter 9).\n\n

        Dwarven Combat Training: You have proficiency
        with the battleaxe, handaxe, throwing hammer,
        and warhammer.\n\n

        Tool Proficiency: You gain proficiency with the
        artisan’s tools of your choice: smith’s tools, brewer’s
        supplies, or mason’s tools.\n\n

        Stonecunning: Whenever you make an Intelligence
        (History) check related to the origin of stonework, you
        are considered proficient in the History skill and add
        double your proficiency bonus to the check, instead of
        your normal proficiency bonus.\n\n

        Languages: You can speak, read, and write Common
        and Dwarvish. Dwarvish is full of hard consonants and
        guttural sounds, and those characteristics spill over into
        whatever other language a dwarf might speak.</string>
    <string name="human_header">Human</string>
    <string name="human_quote">These were the stories of a restless people who
        long ago took to the seas and rivers in longboats, first to
        pillage and terrorize, then to settle. Yet there was an energy,
        a love of adventure, that sang from every page. Long into
        the night Uriel read, lighting candle after precious candle.
        She\'d never given much thought to humans, but these
        stories fascinated her. In these yellowed pages were tales of
        bold heroes, strange and fierce animals, mighty primitive gods,
        and a magic that was part and fabric of that distant land.\n\n

        —Elaine Cunningham , Daughter of the Drow</string>
    <string name="human_description">It\’s hard to make generalizations about humans, but
        your human character has these traits.\n\n

        Ability Score Increase: Your ability scores each
        increase by 1.\n\n

        Age: Humans reach adulthood in their late teens and
        live less than a century.\n\n

        Alignment: Humans tend toward no
        particular alignment. The best and the worst are
        found am ong them.\n\n

        Size: Humans vary widely in height and build, from
        barely 5 feet to well over 6 feet tall. Regardless of your
        position in that range, your size is Medium.\n\n

        Speed: Your base walking speed is 30 feet.\n\n

        Languages: You can speak, read, and write Common
        and one extra language of your choice. Humans typically
        learn the languages of other peoples they deal with,
        including obscure dialects. They are fond of sprinkling
        their speech with words borrowed from other tongues:
        Orc curses, Elvish musical expressions, Dwarvish
        military phrases, and so on.</string>
    <string name="string_char_sheet_text">Character Sheet</string>
    <string name="string_char_name_text">Character Name: </string>
    <string name="string_char_level_text">Level: </string>
    <string name="string_char_class_text">Class: </string>
    <string name="string_char_race_text">Race: </string>
    <string name="string_char_stats_text">Characters Stats: </string>
    <string name="string_char_stats_str_text">Strength: </string>
    <string name="string_char_stats_dex_text">Dexterity: </string>
    <string name="string_char_stats_con_text">Constitution: </string>
    <string name="string_char_stats_int_text">Intellect: </string>
    <string name="string_char_stats_wis_text">Wisdom: </string>
    <string name="string_char_stats_mod_text">Modifier: </string>
    <string name="string_char_button_new">New</string>
    <string name="string_char_button_save">Save</string>
    <string name="string_char_button_load">Load</string>
</resources>