<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/dwarf_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dwarf_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dwarf_header"
            android:textAlignment="center"
            android:textSize="@dimen/header_size"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/dwarf_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dwarf_quote"
            android:textSize="@dimen/quote_size"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/dwarf"

            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            />
        <!--android:src="@mipmap/dwarf"-->

        <TextView
            android:id="@+id/dwarf_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dwarf_description"
            android:textSize="@dimen/description_size"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

</ScrollView>